<resources>
    <string name="app_name">Boletta</string>
    <string name="navigation_drawer_open">Abrir navegacion</string>
    <string name="navigation_drawer_close">Cerrar navegación</string>
    <string name="nav_header_title">Boletta</string>
    <string name="nav_header_subtitle">Sistema Gestor de boletas electrónicas</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="login_user">Usuario</string>
    <string name="login_pass">Clave</string>
    <string name="login_access">Acceder</string>
    <string name="login_register">Registrar</string>

    <string name="register_title">Registro nuevo usuario</string>
    <string name="register_name">Nombre</string>
    <string name="register_mail">Correo Electrónico</string>
    <string name="register_pass">Clave de Acceso</string>
    <string name="register_pass_repeat">Repita Clave de Acceso</string>
    <string name="register_save">Guardar</string>
    <string name="register_cancel">Cancelar</string>

    <string name="menu_home">Boletas</string>
    <string name="menu_history">Historial</string>
    <string name="menu_logout">Cerrar Sesión</string>
</resources>