<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.presercomp.boletta.ui.login.LoginFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_ticket" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.presercomp.boletta.ui.history.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.presercomp.boletta.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_slideshow" />
</navigation>